--- a/src/Nancy.AspNetCore.Contrib/project.json
+++ b/src/Nancy.AspNetCore.Contrib/project.json
@@ -2,7 +2,9 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.1",
+    "Nancy": "2.0.0-clinteastwood",
+    "Microsoft.AspNetCore.Http": "1.1.0"
   },
 
   "frameworks": {
